--- a/BattleInfoPlugin/SampleData/CellTypeViewModelSampleData.xaml
+++ b/BattleInfoPlugin/SampleData/CellTypeViewModelSampleData.xaml
@@ -1,7 +1,10 @@
 ﻿<viewModels:CellTypeViewModel xmlns:viewModels="clr-namespace:BattleInfoPlugin.ViewModels"
-                   CellType="ボス,夜戦">
+                              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                              CellType="ボス,夜戦">
     <viewModels:CellTypeViewModel.SigleCellTypes>
-        <viewModels:CellTypeViewModel CellType="ボス" />
-        <viewModels:CellTypeViewModel CellType="夜戦" />
+        <x:Array Type="viewModels:CellTypeViewModel">
+            <viewModels:CellTypeViewModel CellType="ボス" />
+            <viewModels:CellTypeViewModel CellType="夜戦" />
+        </x:Array>
     </viewModels:CellTypeViewModel.SigleCellTypes>
 </viewModels:CellTypeViewModel>
