--- a/BattleInfoPlugin/SampleData/FleetViewModelSampleData.xaml
+++ b/BattleInfoPlugin/SampleData/FleetViewModelSampleData.xaml
@@ -4,48 +4,36 @@
                            xmlns:Messaging="clr-namespace:Livet.Messaging;assembly=Livet"
                            xmlns:models="clr-namespace:BattleInfoPlugin.Models"
                            xmlns:viewModels="clr-namespace:BattleInfoPlugin.ViewModels"
+                           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                            Name="敵艦隊"
                            FleetFormation="戦闘陣形"
                            IsVisible="True">
 
-    <viewModels:FleetViewModel.AirCombatResults>
-        <viewModels:AirCombatResultViewModel Name="1回目/空対空"/>
-        <viewModels:AirCombatResultViewModel Name="1回目/空対艦"
-                                IsHappen="True"
-                                Count="400"
-                                LostCount="100"
-                                RemainingCount="300"/>
-        <viewModels:AirCombatResultViewModel Name="空対空"
-                                IsHappen="True"
-                                Count="900"
-                                LostCount="200"
-                                RemainingCount="700"/>
-        <viewModels:AirCombatResultViewModel Name="空対艦"/>
-    </viewModels:FleetViewModel.AirCombatResults>
-
     <viewModels:FleetViewModel.Fleet>
         <models:FleetData Formation="戦闘陣形" FleetType="Enemy">
             <models:FleetData.Ships>
-                <models:MembersShipData MaxHP="15" NowHP="83" Name="戦艦水鬼" Situation="Tow" TypeName="つよい" DamageControlled="True">
-                    <models:MembersShipData.HP>
-                        <wrapper:LimitedValue Current="6" Maximum="9" Minimum="0"/>
-                    </models:MembersShipData.HP>
-                </models:MembersShipData>
-                <models:MembersShipData MaxHP="20" NowHP="96" Name="ほっぽ" Situation="Evacuation" TypeName="ろり" AdditionalName="elite">
-                    <models:MembersShipData.HP>
-                        <wrapper:LimitedValue Current="71" Maximum="85" Minimum="0"/>
-                    </models:MembersShipData.HP>
-                </models:MembersShipData>
-                <models:MembersShipData MaxHP="40" NowHP="0" Name="駆逐ロ級後期型" Situation="HeavilyDamaged" TypeName="きもい" AdditionalName="flagship" IsUsedDamecon="True" DamageControlled="True">
-                    <models:MembersShipData.HP>
-                        <wrapper:LimitedValue Current="0" Maximum="25" Minimum="0"/>
-                    </models:MembersShipData.HP>
-                </models:MembersShipData>
-                <models:MembersShipData MaxHP="40" NowHP="1" Name="戦艦レ級後期型改" TypeName="こわい" AdditionalName="flagship" DamageReceived="10">
-                    <models:MembersShipData.HP>
-                        <wrapper:LimitedValue Current="1" Maximum="1" Minimum="0"/>
-                    </models:MembersShipData.HP>
-                </models:MembersShipData>
+                <x:Array Type="models:MembersShipData">
+                    <models:MembersShipData MaxHP="15" NowHP="83" Name="戦艦水鬼" Situation="Tow" TypeName="つよい" DamageControlled="True">
+                        <models:MembersShipData.HP>
+                            <wrapper:LimitedValue Current="6" Maximum="9" Minimum="0"/>
+                        </models:MembersShipData.HP>
+                    </models:MembersShipData>
+                    <models:MembersShipData MaxHP="20" NowHP="96" Name="ほっぽ" Situation="Evacuation" TypeName="ろり" AdditionalName="elite">
+                        <models:MembersShipData.HP>
+                            <wrapper:LimitedValue Current="71" Maximum="85" Minimum="0"/>
+                        </models:MembersShipData.HP>
+                    </models:MembersShipData>
+                    <models:MembersShipData MaxHP="40" NowHP="0" Name="駆逐ロ級後期型" Situation="HeavilyDamaged" TypeName="きもい" AdditionalName="flagship" IsUsedDamecon="True" DamageControlled="True">
+                        <models:MembersShipData.HP>
+                            <wrapper:LimitedValue Current="0" Maximum="25" Minimum="0"/>
+                        </models:MembersShipData.HP>
+                    </models:MembersShipData>
+                    <models:MembersShipData MaxHP="40" NowHP="1" Name="戦艦レ級後期型改" TypeName="こわい" AdditionalName="flagship" DamageReceived="10">
+                        <models:MembersShipData.HP>
+                            <wrapper:LimitedValue Current="1" Maximum="1" Minimum="0"/>
+                        </models:MembersShipData.HP>
+                    </models:MembersShipData>
+                </x:Array>
             </models:FleetData.Ships>
         </models:FleetData>
     </viewModels:FleetViewModel.Fleet>
