--- a/BattleInfoPlugin/Styles/PluginStyle.xaml
+++ b/BattleInfoPlugin/Styles/PluginStyle.xaml
@@ -31,6 +31,7 @@
 
         <ResourceDictionary Source="pack://application:,,,/BattleInfoPlugin;component/Styles/Cell.xaml" />
         <ResourceDictionary Source="pack://application:,,,/BattleInfoPlugin;component/Styles/Flag.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/BattleInfoPlugin;component/Styles/PlaceHolderTextControl.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
     <conv:NullToVisibilityConverter x:Key="NullToVisibilityConverter"/>
