--- a/BattleInfoPlugin/SampleData/FleetViewModelSampleData.xaml
+++ b/BattleInfoPlugin/SampleData/FleetViewModelSampleData.xaml
@@ -1,4 +1,4 @@
-﻿<viewModels:FleetViewModel xmlns:BattleInfoPlugin="clr-namespace:BattleInfoPlugin"
+﻿<viewModels:SingleFleetViewModel xmlns:BattleInfoPlugin="clr-namespace:BattleInfoPlugin"
                            xmlns:Livet="clr-namespace:Livet;assembly=Livet"
                            xmlns:wrapper="clr-namespace:Grabacr07.KanColleWrapper.Models;assembly=KanColleWrapper"
                            xmlns:Messaging="clr-namespace:Livet.Messaging;assembly=Livet"
@@ -9,7 +9,7 @@
                            FleetFormation="戦闘陣形"
                            IsVisible="True">
 
-    <viewModels:FleetViewModel.Fleet>
+    <viewModels:SingleFleetViewModel.Fleet>
         <models:FleetData Formation="戦闘陣形" FleetType="Enemy">
             <models:FleetData.Ships>
                 <x:Array Type="models:MembersShipData">
@@ -36,6 +36,6 @@
                 </x:Array>
             </models:FleetData.Ships>
         </models:FleetData>
-    </viewModels:FleetViewModel.Fleet>
+    </viewModels:SingleFleetViewModel.Fleet>
 
-</viewModels:FleetViewModel>
+</viewModels:SingleFleetViewModel>
